[WFLY-10932] Deactivating modular JDK workarounds - these are not needed anymore.